# evosoro

./: README.md
evosoro/: base.py  networks.py  softbot.py  softbot_double_needle.py
evosoro/_voxcad/: CMakeLists.txt  Makefile  VoxCad.pro  fullrot.xml  trans2_9.xml  trans4_9.xml
evosoro/_voxcad/Voxelyze/: CMakeLists.txt  Makefile  VX_Sim.cpp  VX_Sim.h  VX_SimGA.cpp
evosoro/_voxcad/Voxelyze/Utils/: Vec3D.h
evosoro/_voxcad/voxelyzeMain/: 5  6  Makefile  deze.vxa  fullrot.vxa  fullrot.xml  fullrotdeze.xml  fullrotdeze2.xml  needle.vxa  rot  trans5_9.xml  trans5_9_3.xml  trans6.vxa  trans6.xml  trans7.xml  trans7_4.vxa  trans7_init0.xml  trans7_init1.xml  trans8.xml  trans8_50.vxa  trans8_init0.xml  trans9.vxa  trans_9_1.xml  trans_9_9_1.xml  voxelyze
evosoro/_voxcad_land_water/: Makefile
evosoro/afstuderen/: double_needle.py  double_needle2.py  double_needle2_ancestors_redo.py  double_needle2_annealing_redo.py  double_needle3.py  needle_rotation.py  nohup.out  throwing.py  transmission_evolved_stiffness.py  transmission_reset.py  voxelyze
evosoro/afstuderen/double_needle_momentum_data12/Gen_0000/: double_needle_momentum12--Gen_0000--fit_-0.00000392--id_00033.vxa  double_needle_momentum12--Gen_0000--fit_0.00000000--id_00002.vxa  double_needle_momentum12--Gen_0000--fit_0.00000000--id_00007.vxa  double_needle_momentum12--Gen_0000--fit_0.00000000--id_00008.vxa  double_needle_momentum12--Gen_0000--fit_0.00000000--id_00014.vxa  double_needle_momentum12--Gen_0000--fit_0.00000000--id_00029.vxa  double_needle_momentum12--Gen_0000--fit_0.00000000--id_00032.vxa  double_needle_momentum12--Gen_0000--fit_0.00000000--id_00034.vxa  double_needle_momentum12--Gen_0000--fit_0.00000000--id_00036.vxa  double_needle_momentum12--Gen_0000--fit_0.00000000--id_00037.vxa  double_needle_momentum12--Gen_0000--fit_0.00018433--id_00000.vxa  double_needle_momentum12--Gen_0000--fit_0.00018433--id_00010.vxa  double_needle_momentum12--Gen_0000--fit_0.00018433--id_00012.vxa  double_needle_momentum12--Gen_0000--fit_0.00018433--id_00013.vxa  double_needle_momentum12--Gen_0000--fit_0.00018433--id_00020.vxa  double_needle_momentum12--Gen_0000--fit_0.00018433--id_00023.vxa  double_needle_momentum12--Gen_0000--fit_0.00018433--id_00025.vxa  double_needle_momentum12--Gen_0000--fit_0.00018433--id_00038.vxa
evosoro/afstuderen/double_needle_momentum_data12/Gen_0001/: double_needle_momentum12--Gen_0001--fit_-0.00000162--id_00044.vxa  double_needle_momentum12--Gen_0001--fit_-0.00000391--id_00039.vxa  double_needle_momentum12--Gen_0001--fit_-0.00004133--id_00004.vxa  double_needle_momentum12--Gen_0001--fit_-0.00004333--id_00075.vxa  double_needle_momentum12--Gen_0001--fit_-0.00012186--id_00083.vxa  double_needle_momentum12--Gen_0001--fit_-0.00061396--id_00110.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00001.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00009.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00011.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00015.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00016.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00018.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00019.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00026.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00028.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00031.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00035.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00041.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00043.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00045.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00046.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00049.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00053.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00054.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00058.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00060.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00062.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00064.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00066.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00067.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00069.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00071.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00074.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00076.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00077.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00079.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00081.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00082.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00087.vxa  double_needle_momentum12--Gen_0001--fit_0.00000000--id_00089.vxa  (+39 more)
evosoro/afstuderen/double_needle_momentum_data12/Gen_0002/: double_needle_momentum12--Gen_0002--fit_-0.00000033--id_00117.vxa  double_needle_momentum12--Gen_0002--fit_-0.00000345--id_00125.vxa  double_needle_momentum12--Gen_0002--fit_-0.00009260--id_00098.vxa  double_needle_momentum12--Gen_0002--fit_-0.00011876--id_00140.vxa  double_needle_momentum12--Gen_0002--fit_-0.00016289--id_00120.vxa  double_needle_momentum12--Gen_0002--fit_-0.00077720--id_00143.vxa  (+78 more)
evosoro/examples/: basic.py  basic_pushing.py  growth.py  swimming_basic.py
evosoro/examples/softrobotsnetwork/: mainSoftbotTwoNetworks (copy).py  mainSoftbotTwoNetworks.py  voxelyze
evosoro/tools/: algorithms.py  checkpointing.py  evaluation.py  logging.py  mutation.py  read_write_voxelyze (another copy).py  read_write_voxelyze.py  read_write_voxelyze_copy.py  read_write_voxelyze_met_fixed_region.py  read_write_voxelyze_redoanc.py  read_write_voxelyze_single_needle.py  read_write_voxelyze_single_needle2.py  read_write_voxelyze_transmission20-12-2-horizontal.py  selection.py  utils.py
(+15584 files in other folders)
