cmake_minimum_required(VERSION 3.12)
project(_voxcad)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(GeneratedFiles)
include_directories(QTUtils)
include_directories(VoxCad)
include_directories(Voxelyze)
include_directories(Voxelyze/Utils)
include_directories(voxelyzeMain)

add_executable(_voxcad
        GeneratedFiles/release/moc_Dlg_3DBrush.cpp
        GeneratedFiles/release/moc_Dlg_BCs.cpp
        GeneratedFiles/release/moc_Dlg_EditPrim.cpp
        GeneratedFiles/release/moc_Dlg_FEAInfo.cpp
        GeneratedFiles/release/moc_Dlg_Palette.cpp
        GeneratedFiles/release/moc_Dlg_Physics.cpp
        GeneratedFiles/release/moc_Dlg_StructureEditor.cpp
        GeneratedFiles/release/moc_Dlg_Tensile.cpp
        GeneratedFiles/release/moc_Dlg_VideoCapture.cpp
        GeneratedFiles/release/moc_Dlg_VoxInfo.cpp
        GeneratedFiles/release/moc_Dlg_Workspace.cpp
        GeneratedFiles/release/moc_QOpenGL.cpp
        GeneratedFiles/release/moc_QSimplePlot.cpp
        GeneratedFiles/release/moc_QThreadWrap.cpp
        GeneratedFiles/release/moc_QVX_Edit.cpp
        GeneratedFiles/release/moc_QVX_Interfaces.cpp
        GeneratedFiles/release/moc_QVX_TensileTest.cpp
        GeneratedFiles/release/moc_VoxCad.cpp
        GeneratedFiles/qrc_VoxCad.cpp
        GeneratedFiles/ui_vBCs.h
        GeneratedFiles/ui_vFEAInfo.h
        GeneratedFiles/ui_VoxCad.h
        GeneratedFiles/ui_vPalette.h
        GeneratedFiles/ui_vPhysics.h
        GeneratedFiles/ui_vPrimEdit.h
        GeneratedFiles/ui_vStructureEditor.h
        GeneratedFiles/ui_vTensile.h
        GeneratedFiles/ui_vVideoGen.h
        GeneratedFiles/ui_vVoxInfo.h
        GeneratedFiles/ui_vWorkSpace.h
        icons/banner.jpg
        icons/V32.ico
        QTUtils/QOpenGL.cpp
        QTUtils/QOpenGL.h
        QTUtils/QSimplePlot.cpp
        QTUtils/QSimplePlot.h
        QTUtils/QThreadWrap.cpp
        QTUtils/QThreadWrap.h
        VoxCad/Dlg_3DBrush.cpp
        VoxCad/Dlg_3DBrush.h
        VoxCad/Dlg_BCs.cpp
        VoxCad/Dlg_BCs.h
        VoxCad/Dlg_EditPrim.cpp
        VoxCad/Dlg_EditPrim.h
        VoxCad/Dlg_FEAInfo.cpp
        VoxCad/Dlg_FEAInfo.h
        VoxCad/Dlg_Palette.cpp
        VoxCad/Dlg_Palette.h
        VoxCad/Dlg_Physics.cpp
        VoxCad/Dlg_Physics.h
        VoxCad/Dlg_StructureEditor.cpp
        VoxCad/Dlg_StructureEditor.h
        VoxCad/Dlg_Tensile.cpp
        VoxCad/Dlg_Tensile.h
        VoxCad/Dlg_VideoCapture.cpp
        VoxCad/Dlg_VideoCapture.h
        VoxCad/Dlg_VoxInfo.cpp
        VoxCad/Dlg_VoxInfo.h
        VoxCad/Dlg_Workspace.cpp
        VoxCad/Dlg_Workspace.h
        VoxCad/main.cpp
        VoxCad/QVX_Edit.cpp
        VoxCad/QVX_Edit.h
        VoxCad/QVX_Interface.cpp
        VoxCad/QVX_Interfaces.h
        VoxCad/QVX_TensileTest.cpp
        VoxCad/QVX_TensileTest.h
        VoxCad/VoxCad.cpp
        VoxCad/VoxCad.h
        Voxelyze/cmake-build-debug/cmake_install.cmake
        Voxelyze/cmake-build-debug/CMakeCache.txt
        Voxelyze/cmake-build-debug/Makefile
        Voxelyze/cmake-build-debug/Voxelyze.cbp
        Voxelyze/Utils/Array3D.cpp
        Voxelyze/Utils/Array3D.d
        Voxelyze/Utils/Array3D.h
        Voxelyze/Utils/Array3D.o
        Voxelyze/Utils/GL_Utils.cpp
        Voxelyze/Utils/GL_Utils.h
        Voxelyze/Utils/MarchCube.cpp
        Voxelyze/Utils/MarchCube.d
        Voxelyze/Utils/MarchCube.h
        Voxelyze/Utils/MarchCube.o
        Voxelyze/Utils/Mesh.cpp
        Voxelyze/Utils/Mesh.d
        Voxelyze/Utils/Mesh.h
        Voxelyze/Utils/Mesh.o
        Voxelyze/Utils/tinyxml.cpp
        Voxelyze/Utils/tinyxml.d
        Voxelyze/Utils/tinyxml.h
        Voxelyze/Utils/tinyxml.o
        Voxelyze/Utils/tinyxmlerror.cpp
        Voxelyze/Utils/tinyxmlerror.d
        Voxelyze/Utils/tinyxmlerror.o
        Voxelyze/Utils/tinyxmlparser.cpp
        Voxelyze/Utils/tinyxmlparser.d
        Voxelyze/Utils/tinyxmlparser.o
        Voxelyze/Utils/Vec3D.h
        Voxelyze/Utils/XML_Rip.cpp
        Voxelyze/Utils/XML_Rip.d
        Voxelyze/Utils/XML_Rip.h
        Voxelyze/Utils/XML_Rip.o
        Voxelyze/Utils/zconf.h
        Voxelyze/Utils/zlib.h
        Voxelyze/Utils/zlib.lib
        Voxelyze/CMakeLists.txt
        Voxelyze/libvoxelyze.0.9.a
        Voxelyze/Makefile
        Voxelyze/OpenGLInclude.h
        Voxelyze/ReadMe.txt
        Voxelyze/Voxelyze.sln
        Voxelyze/Voxelyze.vcxproj
        Voxelyze/Voxelyze.vcxproj.filters
        Voxelyze/VX_Benchmark.cpp
        Voxelyze/VX_Benchmark.d
        Voxelyze/VX_Benchmark.h
        Voxelyze/VX_Benchmark.o
        Voxelyze/VX_Bond.cpp
        Voxelyze/VX_Bond.d
        Voxelyze/VX_Bond.h
        Voxelyze/VX_Bond.o
        Voxelyze/VX_Enums.h
        Voxelyze/VX_Environment.cpp
        Voxelyze/VX_Environment.d
        Voxelyze/VX_Environment.h
        Voxelyze/VX_Environment.o
        Voxelyze/VX_FEA.cpp
        Voxelyze/VX_FEA.d
        Voxelyze/VX_FEA.h
        Voxelyze/VX_FEA.o
        Voxelyze/VX_FRegion.cpp
        Voxelyze/VX_FRegion.d
        Voxelyze/VX_FRegion.h
        Voxelyze/VX_FRegion.o
        "Voxelyze/VX_MeshUtil (copy).cpp"
        Voxelyze/VX_MeshUtil.cpp
        Voxelyze/VX_MeshUtil.d
        Voxelyze/VX_MeshUtil.h
        Voxelyze/VX_MeshUtil.o
        Voxelyze/VX_Object.cpp
        Voxelyze/VX_Object.d
        Voxelyze/VX_Object.h
        Voxelyze/VX_Object.o
        Voxelyze/VX_Sim.cpp
        Voxelyze/VX_Sim.d
        Voxelyze/VX_Sim.h
        Voxelyze/VX_Sim.o
        Voxelyze/VX_SimGA.cpp
        Voxelyze/VX_SimGA.d
        Voxelyze/VX_SimGA.h
        Voxelyze/VX_SimGA.o
        Voxelyze/VX_Source.cpp
        Voxelyze/VX_Source.h
        Voxelyze/VX_Voxel.cpp
        Voxelyze/VX_Voxel.d
        Voxelyze/VX_Voxel.h
        Voxelyze/VX_Voxel.o
        Voxelyze/VXS_Bond.cpp
        Voxelyze/VXS_Bond.d
        Voxelyze/VXS_Bond.h
        Voxelyze/VXS_Bond.o
        Voxelyze/VXS_BondCollision.cpp
        Voxelyze/VXS_BondCollision.d
        Voxelyze/VXS_BondCollision.h
        Voxelyze/VXS_BondCollision.o
        Voxelyze/VXS_BondInternal.cpp
        Voxelyze/VXS_BondInternal.d
        Voxelyze/VXS_BondInternal.h
        Voxelyze/VXS_BondInternal.o
        Voxelyze/VXS_SimGLView.cpp
        Voxelyze/VXS_SimGLView.h
        Voxelyze/VXS_Voxel.cpp
        Voxelyze/VXS_Voxel.d
        Voxelyze/VXS_Voxel.h
        Voxelyze/VXS_Voxel.o
        voxelyzeMain/main.cpp
        voxelyzeMain/main.o
        voxelyzeMain/Makefile
        voxelyzeMain/needle.vxa
        voxelyzeMain/voxelyze
        Makefile
        rebuild_everything.sh)
